--- a/backbone/pythia-jenkins/Dockerfile
+++ b/backbone/pythia-jenkins/Dockerfile
@@ -9,3 +9,6 @@ COPY SetAdminUserDetail.groovy /usr/share/jenkins/ref/init.groovy.d/security.gro
 # Plugin installation
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
+
+EXPOSE 8080
+EXPOSE 50000
