updating the credentials to use the repo; tested as functioning

--- a/backbone/pythia-jenkins/credentials.yml
+++ b/backbone/pythia-jenkins/credentials.yml
@@ -1,8 +1,15 @@
 ---
 - credentialType: 'ssh'
   scope: GLOBAL
-  username: 'ssh_github_pythia_bootstraps'
+  username: 'andas-pythia'
   isJenkinsMasterSsh: False
   path: 'credentials/deployKeyBootstraps.pem'
   passphrase: ''
   description: 'Deploy key for Pythia Bootstraps repo'
+- credentialType: 'ssh'
+  scope: GLOBAL
+  username: 'andas-pythia'
+  isJenkinsMasterSsh: False
+  path: 'credentials/deployKeyExchange.pem'
+  passphrase: ''
+  description: 'Deploy key for Pythia Exchange repo'
