--- a/backbone/pythia-jenkins/modules/git_config.yml
+++ b/backbone/pythia-jenkins/modules/git_config.yml
@@ -1,3 +1,3 @@
 ---
-NAME: 'Andas Build System'
-EMAIL: 'noreply@nicseltzer.com'
+globalConfigName: 'Andas Build System'
+globalConfigEmail: 'noreply@nicseltzer.com'
