standardizing yaml and associated scripts

--- a/backbone/pythia-jenkins/modules/jenkins.yml
+++ b/backbone/pythia-jenkins/modules/jenkins.yml
@@ -1,30 +1,30 @@
 ---
-MAIN:
-    WORKSPACE_ROOT_DIR: '${JENKINS_HOME}/workspace/${ITEM_FULLNAME}'
-    BUILD_RECORD_ROOT_DIR: '${ITEM_ROOTDIR}/builds'
-    SYSTEM_MESSAGE: 'Pythia Build System'
-    NUMBER_OF_EXECUTORS: 3
-    LABELS:
+Main:
+    workSpaceRootPath: '${JENKINS_HOME}/workspace/${ITEM_FULLNAME}'
+    buildRecordRootPath: '${ITEM_ROOTDIR}/builds'
+    systemMessage: 'Pythia Build System'
+    numberOfExecutors: 3
+    labels:
         - "master-node"
-    USAGE: 'EXCLUSIVE'
-    QUIET_PERIOD: 5
-    SCM_RETRY_COUNT: 15
-    DISABLE_REMEMBER_ME: true
-GLOBAL_PROPERTIES:
-    ENVIRONMENT_VARIABLES:
-    TOOL_LOCATIONS:
-LOCATION:
-    URL: 'http://build.pythia.andas.internal:8080'
-    ADMIN_EMAIL: 'nic@nicseltzer.com'
-SHELL:
-    EXECUTABLE: '/bin/bash'
-FORMATTER:
-    FORMATTER_TYPE: 'rawhtml'
+    usage: 'EXCLUSIVE'
+    quietPeriod: 5
+    scmCheckoutRetryCount: 15
+    disableRememberMe: true
+GlobalProperties:
+    environmentVariables:
+    toolLocations:
+Location:
+    url: 'http://build.pythia.andas.internal:8080'
+    adminEmail: 'nic@nicseltzer.com'
+Shell:
+    executable: '/bin/bash'
+Formatter:
+    formatterType: 'rawhtml'
     # Note: this option is only available for 'rawhtml' formatters
-    DISABLE_SYNTAX_HIGHLIGHTING: true
-CLI:
-    CLI_ENABLED: false
-CSRF:
-    CSRF_ENABLED: true
-JNLP:
-    JNLP_SECURED: true
+    disableSyntaxHighlighting: true
+Cli:
+    cliEnabled: false
+Csrf:
+    csrfEnabled: true
+Jnlp:
+    jnlpSecured: true
