--- a/backbone/pythia-jenkins/modules/credentials.yml
+++ b/backbone/pythia-jenkins/modules/credentials.yml
@@ -1,16 +1,8 @@
 ---
 - credentialType: 'ssh'
   scope: GLOBAL
-  username: 'andas-pythia'
+  username: 'andas-bot'
   isJenkinsMasterSsh: False
-  path: 'credentials/deployKeyBootstraps.pem'
+  path: 'credentials/PythiaBuildBotKey.pem'
   passphrase: ''
-  description: 'Deploy key for Pythia Bootstraps repo'
-- credentialType: 'ssh'
-  scope: GLOBAL
-  username: 'andas-pythia'
-  isJenkinsMasterSsh: False
-  path: 'credentials/deployKeyExchange.pem'
-  passphrase: ''
-  description: 'Deploy key for Pythia Exchange repo'
-  
+  description: 'Deploy key for Pythia repos via Build Bot'
