--- a/backbone/pythia-jenkins/modules/security.yml
+++ b/backbone/pythia-jenkins/modules/security.yml
@@ -9,7 +9,7 @@ securityGroups:
     # Users with similar permission needs should be grouped
     # into security groups. This can include GH users, teams,
     # orgs, and the anonymous user
-    - name: 'basic anonymous permissions'
+    - name: 'Anonymous Users - Admin'
       permissions:
         - 'hudson.model.Computer.Build'
         - 'hudson.model.Computer.Configure'
